# hephaes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  __init__.py  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  desktop_main.py  main.py  workspace_bootstrap.py
backend/app/api/: _status.py  assets.py  conversion_configs.py  conversions.py  dashboard.py  episodes.py  health.py  jobs.py  outputs.py  tags.py  visualization.py  workspaces.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/mappers/: __init__.py  workspace.py
backend/app/schemas/: __init__.py  assets.py  conversion_authoring.py  conversions.py  dashboard.py  episodes.py  jobs.py  outputs.py  visualization.py  workspaces.py
backend/app/services/: __init__.py  assets.py  conversion_authoring.py  episodes.py  (+11 more)
backend/data/: app.db
backend/design/: architecture.md  assets-indexing-and-tags.md  conversion-authoring-and-reusable-configs.md  current-state.md  dashboard-phased-implementation.md  data-model-and-storage.md  jobs-conversions-playback-and-visualization.md  outputs-catalog-and-compute-actions.md  overview.md  realtime-replay-and-rerun-sync.md  tasks.md  testing-and-operations.md  workspace-adapter-architecture.md  workspace-adapter-implementation-plan.md
backend/scripts/: build_sidecar.py  stage_tauri_sidecar.py
backend/tests/: conftest.py  test_api_asset_listing.py  test_api_assets.py  test_api_conversion_configs.py  test_api_conversions.py  test_api_conversions_authoring.py  test_api_dashboard_phase1.py  test_api_dashboard_phase2.py  test_api_episodes.py  test_api_indexing.py  test_api_jobs.py  test_api_outputs.py  test_api_phase7.py  test_api_tags.py  test_api_visualization.py  test_api_workspaces.py  test_authoring_contracts.py  test_build_sidecar.py  test_config.py  test_desktop_main.py  test_workspace_bootstrap.py  test_workspace_registry.py
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+354 files in other folders)
