[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hephaes-core"
version = "0.1.0"
description = "Core business logic for Hephaes - ROS bag processing and Parquet conversion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0,<2.0",
  "rosbags>=0.9.0",
  "PyYAML>=6.0",
  "pydantic>=2.6.0,<3.0.0",
  "pyarrow>=16.0.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
