[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hephaes-backend"
version = "0.1.0"
description = "FastAPI backend for the local Hephaes app"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Daniel Yoo"},
  {name = "Fleming Yip"},
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "rerun-sdk>=0.22.0,<0.23.0",
  "hephaes",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

